Updated html to match other files

--- a/red-inside-fullwidth.html
+++ b/red-inside-fullwidth.html
@@ -5,9 +5,12 @@
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Baltimore County Homepage Government</title>
-		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/base.css"/>
+		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/temp-content.css"/>
+		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/red-inside.css"/>
+		<!-- <link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/temp-print.css"/> -->
 		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/base-2.css"/>
-		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/supplimental.css"/>
+		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/fullwidth-bootstrap.css"/>
+		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/road-closures.css"/>
 		<link rel="stylesheet" type="text/css" href="assets/stylesheets/inside-template.css"/>
 		
 		<!--[if lt IE 9]>
@@ -50,7 +53,7 @@
 						</li>
 					</ul>
 				</nav>
-				<div class="search col-md-4">
+				<div class="search search-internal col-md-4">
 				<div class="search-input-container">
 			    <button>Search</button>
 			    <div class="search-text">
@@ -134,7 +137,7 @@
 <script defer="true" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=ra-4e80a2a60c8146f0" type="text/javascript"></script>
 <!-- AddThis Button END --></div><div id="printpagebutton"><div>
 			
-				<a onclick="openFriendlyVersion(); return false;" href="" style="cursor: pointer;"><img width="59" border="0" height="20" title="Print this page." alt="Print this page." src="/sebin/w/w/print-button.gif"></a>
+				<a onclick="openFriendlyVersion(); return false;" href="" style="cursor: pointer;"><img width="59" border="0" height="20" title="Print this page." alt="Print this page." src="http://baltimorecountymd.gov/sebin/w/w/print-button.gif"></a>
 				
 		</div></div></div></div><div id="graybartop">&nbsp;</div><div id="baco_breadcrumb"><span class=""><a href="http://www.baltimorecountymd.gov/" class="" title="Home">Home</a>&nbsp;&gt;&nbsp;<a href="http://www.baltimorecountymd.gov/Agencies/" class="" title="Agency Directory">Agency Directory</a>&nbsp;&gt;&nbsp;<a href="http://www.baltimorecountymd.gov/Agencies/publicworks/" class="" title="Public Works">Public Works</a>&nbsp;&gt;&nbsp;<a href="http://www.baltimorecountymd.gov/Agencies/publicworks/roadclosures/" class="" title="Road Closures">Road Closures</a>&nbsp;&gt;&nbsp;<a href="http://www.baltimorecountymd.gov/Agencies/publicworks/roadclosures/roadclosuresmap.html" class="" title="Map">Map</a></span></div><div></div><div id="mainContent"><noscript> &lt;h1&gt;Javascript Is Disabled On Your Browser&lt;/h1&gt;
 &lt;p&gt;It appears that your browser does not support JavaScript, or you have it disabled. This site is best viewed with JavaScript enabled.  If JavaScript is disabled in your browser, please turn it back on then reload this page.&lt;/p&gt;
@@ -143,12 +146,13 @@
 &lt;a href="http://www.baltimorecountymd.gov/enablejavascript.html"&gt;http://www.baltimorecountymd.gov/enablejavascript.html&lt;/a&gt;&lt;/b&gt;&lt;/p&gt;</noscript><div id="relatedtopics"><div id="calloutarea"><!-- skip navigation removed from included pages --></div></div><div><a name="Skip"></a></div><h1>Current Road Closures Map</h1><p>The following Baltimore County roads are currently closed due to repairs, accidents, weather or other hazards. Data on this map is updated every five minutes, so check back often for the latest status.</p><p><a href="http://resources.baltimorecountymd.gov/Test/RoadClosures/RoadClosures" title="View a list of current road closures." class="contentButton">View as list</a></p><div class="map-container"><div class="no-closures-container"><div class="disclaimer"><h2 class="no-closures disclaimer-title">No Current Closures</h2><p class="disclaimer-message">There are currently no road closures. Please check back for updates.</p></div></div><iframe width="100%" height="600" frameborder="0" src="http://www.arcgis.com/home/webmap/templates/OnePane/basicviewer/embed.html?webmap=7e56c64282b743f49eafcb29fac75cf6&amp;gcsextent=-77.3252,39.1294,-75.897,39.7867&amp;home=true&amp;displayslider=true&amp;displayscalebar=true&amp;displaylegend=true&amp;displaybasemaps=true" marginwidth="0" marginheight="0" scrolling="no"></iframe><br><small><a target="_blank" style="color:#0000FF;text-align:left" href="http://www.arcgis.com/home/webmap/viewer.html?webmap=7e56c64282b743f49eafcb29fac75cf6&amp;gcsextent=-77.3252,39.1294,-75.897,39.7867">View larger map</a></small>
 <div class="unmapped-results-container">
 <p>The following roads are closed but do not appear on the map.</p>
-<div class="unmapped-results"></div></div></div></div><img width="0" vspace="0" hspace="0" height="0" alt="" src="/sebin/l/c/blank.jpg"></div></div>
+<div class="unmapped-results"></div></div></div></div><img width="0" vspace="0" hspace="0" height="0" alt="" src="http://baltimorecountymd.gov/sebin/l/c/blank.jpg"></div></div>
 
 				<!--SITE EXECUTIVE HTML END-->
 		</div>
 		</div>
-		
+		</div>
+		</div>
 		<footer class="footer">
 			<section class="primary-footer container">
 			<section class="county-map-container col-md-6 col-sm-6">
