Updated html to match other files

--- a/red-inside-fullwidth-bootstrap.html
+++ b/red-inside-fullwidth-bootstrap.html
@@ -5,9 +5,11 @@
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Baltimore County Homepage Government</title>
-		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/base.css"/>
+		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/temp-content.css"/>
+		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/red-inside.css"/>
+		<!-- <link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/temp-print.css"/> -->
 		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/base-2.css"/>
-		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/supplimental.css"/>
+		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/walking-trails.css"/>
 		<link rel="stylesheet" type="text/css" href="assets/stylesheets/inside-template.css"/>
 		
 		<!--[if lt IE 9]>
@@ -50,7 +52,7 @@
 						</li>
 					</ul>
 				</nav>
-				<div class="search col-md-4">
+				<div class="search search-internal col-md-4">
 				<div class="search-input-container">
 			    <button>Search</button>
 			    <div class="search-text">
@@ -204,6 +206,8 @@
                                   <a title="Return to the top of the Walking Trails Application" href="#app-header" class="back-to-top">Back to Top</a> <div id="disclaimer" class="disclaimer row"><h3>Disclaimer</h3><p>This data is only for general information purposes only. This data may be inaccurate or contain errors or omissions. Baltimore County, Maryland does not warrant the accuracy or reliability of the data and disclaims all warranties with regard to the data, including but not limited to, all warranties, express or implied, of merchantability and fitness for any particular purpose. Baltimore County, Maryland disclaims all obligation and liability for damages, including but not limited to, actual, special, indirect, and consequential damages, attorneys’ and experts’ fees, and court costs incurred as a result of, arising from or in connection with the use of or reliance upon this data. For more details, review the <a href="http://www.baltimorecountymd.gov/UserGuide/usertermsconditions.html" title="Review the General User Terms and Conditions for the Baltimore County website.">General User Terms and Conditions</a> for the Baltimore County website.</p></div></div></div><img width="0" vspace="0" hspace="0" height="0" alt="" src="/sebin/l/c/blank.jpg"></div></div>
 
 				<!--SITE EXECUTIVE HTML END-->
+		</div>
+		</div>
 		</div>
 		</div>
 		
