Updated html to match other files

--- a/red-inside-police-blog.html
+++ b/red-inside-police-blog.html
@@ -5,9 +5,10 @@
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Baltimore County Homepage Government</title>
-		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/base.css"/>
+		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/temp-content.css"/>
+		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/police-blog.css"/>
+		<!-- <link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/temp-print.css"/> -->
 		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/base-2.css"/>
-		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/supplimental.css"/>
 		<link rel="stylesheet" type="text/css" href="assets/stylesheets/inside-template.css"/>
 		
 		<!--[if lt IE 9]>
@@ -28,7 +29,6 @@
 	      <script src="assets/js/lib/html5shiv.min.js"></script>
 	      <script src="assets/js/lib/respond.min.js"></script>
 	    <![endif]-->
-
 	</head>
 	<body class="homepage">
 		<div id="skiptocontent" class="skip-nav">
@@ -50,7 +50,7 @@
 						</li>
 					</ul>
 				</nav>
-				<div class="search col-md-4">
+				<div class="search search-internal col-md-4">
 				<div class="search-input-container">
 			    <button>Search</button>
 			    <div class="search-text">
@@ -134,9 +134,9 @@
 <script defer="true" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=ra-4e80a2a60c8146f0" type="text/javascript"></script>
 <!-- AddThis Button END --></div><div id="printpagebutton"><div>
 			
-				<a onclick="openFriendlyVersion(); return false;" href="" style="cursor: pointer;"><img width="59" border="0" height="20" title="Print this page." alt="Print this page." src="/sebin/w/w/print-button.gif"></a>
+				<a onclick="openFriendlyVersion(); return false;" href="" style="cursor: pointer;"><img width="59" border="0" height="20" title="Print this page." alt="Print this page." src="http://baltimorecountymd.gov/sebin/w/w/print-button.gif"></a>
 				
-		</div></div></div></div><div id="graybartop">&nbsp;</div><div id="blogimagecontainer"><img width="710" vspace="0" border="0" hspace="0" height="120" alt="iWatch - You Inform Us, We Inform You." src="/sebin/b/r/Banner-v3.jpg"></div><div id="seBlogTabsContainer"><!-- skip navigation removed from included pages --><div id="seBlogTabs"><ul><li><a href="http://www.baltimorecountymd.gov/News/PoliceNews/iWatch" title="View Police and Fire News from Baltimore County." class="active">News</a></li><li><a href="http://www.baltimorecountymd.gov/News/PoliceNews/Precincts/index.html" title="View Baltimore County precinct news.">Precincts</a></li><li><a href="http://www.baltimorecountymd.gov/News/PoliceNews/PoliceTV/Police TV" title="View Baltimore County Police videos.">Police TV</a></li><li><a href="http://www.baltimorecountymd.gov/News/PoliceNews/MediaRelations/index.html" title="Learn more about the Office of Media Relations.">Media Relations</a></li></ul></div></div><div id="baco_breadcrumb"><span class=""><a href="http://www.baltimorecountymd.gov/" class="" title="Home">Home</a>&nbsp;&gt;&nbsp;<a href="http://www.baltimorecountymd.gov/News/" class="" title="News">News</a>&nbsp;&gt;&nbsp;IWatch&nbsp;&gt;&nbsp;<a href="/News/PoliceNews/iWatch" class="" title="Baltimore County Police and Fire News">Baltimore County Police and Fire News</a></span></div><div></div><div id="mainContent"><noscript> &lt;h1&gt;Javascript Is Disabled On Your Browser&lt;/h1&gt;
+		</div></div></div></div><div id="graybartop">&nbsp;</div><div id="blogimagecontainer"><img width="710" vspace="0" border="0" hspace="0" height="120" alt="iWatch - You Inform Us, We Inform You." src="http://baltimorecountymd.gov/sebin/b/r/Banner-v3.jpg"></div><div id="seBlogTabsContainer"><!-- skip navigation removed from included pages --><div id="seBlogTabs"><ul><li><a href="http://www.baltimorecountymd.gov/News/PoliceNews/iWatch" title="View Police and Fire News from Baltimore County." class="active">News</a></li><li><a href="http://www.baltimorecountymd.gov/News/PoliceNews/Precincts/index.html" title="View Baltimore County precinct news.">Precincts</a></li><li><a href="http://www.baltimorecountymd.gov/News/PoliceNews/PoliceTV/Police TV" title="View Baltimore County Police videos.">Police TV</a></li><li><a href="http://www.baltimorecountymd.gov/News/PoliceNews/MediaRelations/index.html" title="Learn more about the Office of Media Relations.">Media Relations</a></li></ul></div></div><div id="baco_breadcrumb"><span class=""><a href="http://www.baltimorecountymd.gov/" class="" title="Home">Home</a>&nbsp;&gt;&nbsp;<a href="http://www.baltimorecountymd.gov/News/" class="" title="News">News</a>&nbsp;&gt;&nbsp;IWatch&nbsp;&gt;&nbsp;<a href="/News/PoliceNews/iWatch" class="" title="Baltimore County Police and Fire News">Baltimore County Police and Fire News</a></span></div><div></div><div id="mainContent"><noscript> &lt;h1&gt;Javascript Is Disabled On Your Browser&lt;/h1&gt;
 &lt;p&gt;It appears that your browser does not support JavaScript, or you have it disabled. This site is best viewed with JavaScript enabled.  If JavaScript is disabled in your browser, please turn it back on then reload this page.&lt;/p&gt;
 &lt;p&gt;&lt;b&gt;If your browser does not support JavaScript, select the link below: &lt;br&gt;
   &lt;br&gt;
@@ -214,7 +214,7 @@ On December 21, 2014, Bal...</a>
 	<a href="/News/PoliceNews/iWatch/date/2015/3/12">Mar 12, 2015 6:00:00 AM EDT</a>
 </div>
 									<div class="postAuthor">Posted by: John Wachter</div>
-									<div class="postContent"><p>Baltimore County Police have charged a Baltimore County Public School teacher with sexual abuse of a minor.</p><p>On December 21, 2014, Baltimore County Police learned about allegations that a teacher at General John Stricker Middle School in Dundalk had inappropriate contact with a student at the school.</p><p>The student told investigators that the contact with the teacher started in early December 2014 and involved kissing. The teacher also showed the student notes on his cell phone which stated things that included "Do you do more than a kiss?" The teacher also poked the student in areas of the student's chest and on the student's buttocks one or two times with his finger. The last time that there was contact was on December 19, 2014.</p><p>The teacher has been identified as 25-year-old Chad Aaron Hall of the Unit Block of Lincoln Woods Way 21128. He has been charged with sexual abuse of a minor, third degree sex offense, and second degree assault. He was released on $150,000 bail.</p><p>This incident remains under investigation by the Baltimore county Police Crimes Against Children Unit.</p><p>Anyone with information on Chad Aaron Hall is asked to call Baltimore County Police at 410-307-2020.</p><h4>Booking Photograph of Chad Aaron Hall<img width="476" vspace="0" hspace="0" height="595" alt="" src="/sebin/l/a/Chad Aaron Hall Booking Photo.jpg"></h4></div>	
+									<div class="postContent"><p>Baltimore County Police have charged a Baltimore County Public School teacher with sexual abuse of a minor.</p><p>On December 21, 2014, Baltimore County Police learned about allegations that a teacher at General John Stricker Middle School in Dundalk had inappropriate contact with a student at the school.</p><p>The student told investigators that the contact with the teacher started in early December 2014 and involved kissing. The teacher also showed the student notes on his cell phone which stated things that included "Do you do more than a kiss?" The teacher also poked the student in areas of the student's chest and on the student's buttocks one or two times with his finger. The last time that there was contact was on December 19, 2014.</p><p>The teacher has been identified as 25-year-old Chad Aaron Hall of the Unit Block of Lincoln Woods Way 21128. He has been charged with sexual abuse of a minor, third degree sex offense, and second degree assault. He was released on $150,000 bail.</p><p>This incident remains under investigation by the Baltimore county Police Crimes Against Children Unit.</p><p>Anyone with information on Chad Aaron Hall is asked to call Baltimore County Police at 410-307-2020.</p><h4>Booking Photograph of Chad Aaron Hall<img width="476" vspace="0" hspace="0" height="595" alt="" src="http://baltimorecountymd.gov/sebin/l/a/Chad Aaron Hall Booking Photo.jpg"></h4></div>	
 									<div class="postKeywords">
 										<span class="postKeywordsDesc">Keywords:</span>
 										<a href="/News/PoliceNews/iWatch/keyword/precinct%2012">precinct 12</a>
@@ -358,6 +358,8 @@ On December 21, 2014, Bal...</a>
 </div>&nbsp;</div></div></div>
 
 				<!--SITE EXECUTIVE HTML END-->
+		</div>
+		</div>
 		</div>
 		</div>
 		
