--- a/red-inside-snowfighter.html
+++ b/red-inside-snowfighter.html
@@ -5,9 +5,10 @@
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Baltimore County Homepage Government</title>
-		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/base.css"/>
+		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/temp-content.css"/>
+		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/snow-fighter.css"/>
+		<!-- <link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/temp-print.css"/> -->
 		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/base-2.css"/>
-		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/supplimental.css"/>
 		<link rel="stylesheet" type="text/css" href="assets/stylesheets/inside-template.css"/>
 		
 		<!--[if lt IE 9]>
@@ -50,7 +51,7 @@
 						</li>
 					</ul>
 				</nav>
-				<div class="search col-md-4">
+				<div class="search search-internal col-md-4">
 				<div class="search-input-container">
 			    <button>Search</button>
 			    <div class="search-text">
@@ -134,13 +135,13 @@
 <script defer="true" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=ra-4e80a2a60c8146f0" type="text/javascript"></script>
 <!-- AddThis Button END --></div><div id="printpagebutton"><div>
 			
-				<a onclick="openFriendlyVersion(); return false;" href="" style="cursor: pointer;"><img width="59" border="0" height="20" title="Print this page." alt="Print this page." src="/sebin/w/w/print-button.gif"></a>
+				<a onclick="openFriendlyVersion(); return false;" href="" style="cursor: pointer;"><img width="59" border="0" height="20" title="Print this page." alt="Print this page." src="http://baltimorecountymd.gov/sebin/w/w/print-button.gif"></a>
 				
-		</div></div></div></div><div id="graybartop">&nbsp;</div><div id="blogimagecontainer"><img width="710" vspace="0" border="0" hspace="0" height="166" alt="Snowfighter - Winter Storm Operations" src="/sebin/a/n/snowfighterheaderbanner.gif"></div><div id="seBlogTabsContainer"><!-- skip navigation removed from included pages --><div id="seBlogTabs"><ul><li><a href="http://www.baltimorecountymd.gov/Agencies/publicworks/SnowFighter/index.html" title="View Snowfighter updates." class="active">Updates</a></li><li><a href="http://www.baltimorecountymd.gov/Agencies/publicworks/SnowFighter/Snow%20Removal/snowremoval.html" title="Learn more about snow removal.">Snow Removal<br></a></li><li><a href="http://www.baltimorecountymd.gov/Agencies/publicworks/SnowFighter/Trash%20Collection/trashcollection.html" title="Learn more about trash collection.">Trash Collection<br></a></li><li><a href="http://www.baltimorecountymd.gov/Agencies/publicworks/SnowFighter/Storm%20Safety/stormsafety.html" title="Get tips for storm safety.">Storm Safety</a></li></ul></div></div><div id="baco_breadcrumb"><span class=""><a href="http://www.baltimorecountymd.gov/" class="" title="Home">Home</a>&nbsp;&gt;&nbsp;<a href="http://www.baltimorecountymd.gov/Agencies/" class="" title="Agency Directory">Agency Directory</a>&nbsp;&gt;&nbsp;<a href="http://www.baltimorecountymd.gov/Agencies/publicworks/" class="" title="Public Works">Public Works</a>&nbsp;&gt;&nbsp;<a href="http://www.baltimorecountymd.gov/Agencies/publicworks/SnowFighter/" class="" title="Snowfighter">Snowfighter</a>&nbsp;&gt;&nbsp;<a href="http://www.baltimorecountymd.gov/Agencies/publicworks/SnowFighter/index.html" class="" title="Winter Storm Operations">Winter Storm Operations</a></span></div><div></div><div id="mainContent"><noscript> &lt;h1&gt;Javascript Is Disabled On Your Browser&lt;/h1&gt;
+		</div></div></div></div><div id="graybartop">&nbsp;</div><div id="blogimagecontainer"><img width="710" vspace="0" border="0" hspace="0" height="166" alt="Snowfighter - Winter Storm Operations" src="http://baltimorecountymd.gov/sebin/a/n/snowfighterheaderbanner.gif"></div><div id="seBlogTabsContainer"><!-- skip navigation removed from included pages --><div id="seBlogTabs"><ul><li><a href="http://www.baltimorecountymd.gov/Agencies/publicworks/SnowFighter/index.html" title="View Snowfighter updates." class="active">Updates</a></li><li><a href="http://www.baltimorecountymd.gov/Agencies/publicworks/SnowFighter/Snow%20Removal/snowremoval.html" title="Learn more about snow removal.">Snow Removal<br></a></li><li><a href="http://www.baltimorecountymd.gov/Agencies/publicworks/SnowFighter/Trash%20Collection/trashcollection.html" title="Learn more about trash collection.">Trash Collection<br></a></li><li><a href="http://www.baltimorecountymd.gov/Agencies/publicworks/SnowFighter/Storm%20Safety/stormsafety.html" title="Get tips for storm safety.">Storm Safety</a></li></ul></div></div><div id="baco_breadcrumb"><span class=""><a href="http://www.baltimorecountymd.gov/" class="" title="Home">Home</a>&nbsp;&gt;&nbsp;<a href="http://www.baltimorecountymd.gov/Agencies/" class="" title="Agency Directory">Agency Directory</a>&nbsp;&gt;&nbsp;<a href="http://www.baltimorecountymd.gov/Agencies/publicworks/" class="" title="Public Works">Public Works</a>&nbsp;&gt;&nbsp;<a href="http://www.baltimorecountymd.gov/Agencies/publicworks/SnowFighter/" class="" title="Snowfighter">Snowfighter</a>&nbsp;&gt;&nbsp;<a href="http://www.baltimorecountymd.gov/Agencies/publicworks/SnowFighter/index.html" class="" title="Winter Storm Operations">Winter Storm Operations</a></span></div><div></div><div id="mainContent"><noscript> &lt;h1&gt;Javascript Is Disabled On Your Browser&lt;/h1&gt;
 &lt;p&gt;It appears that your browser does not support JavaScript, or you have it disabled. This site is best viewed with JavaScript enabled.  If JavaScript is disabled in your browser, please turn it back on then reload this page.&lt;/p&gt;
 &lt;p&gt;&lt;b&gt;If your browser does not support JavaScript, select the link below: &lt;br&gt;
   &lt;br&gt;
-&lt;a href="http://www.baltimorecountymd.gov/enablejavascript.html"&gt;http://www.baltimorecountymd.gov/enablejavascript.html&lt;/a&gt;&lt;/b&gt;&lt;/p&gt;</noscript><div id="relatedtopics"><!-- skip navigation removed from included pages --><div id="relatedtopics"></div><div id="calloutarea"><!-- skip navigation removed from included pages --><div class="calloutTitle">Live Traffic Updates</div><div class="image_left"><a href="http://www.chart.state.md.us/TravInfo/trafficcams.php" title="View live traffic in your area."><img width="158" vspace="0" border="0" hspace="0" height="219" alt="image of snow-covered road and CHART logo" src="/sebin/g/c/CHARTimage.gif"></a></div><p>Get <a href="http://www.chart.state.md.us/TravInfo/trafficcams.php" title="View live traffic conditions in your area.">live traffic updates</a> for your area from the Maryland Department of Transportation.</p></div></div><div><a name="Skip"></a></div><h1>Snowfighter</h1><h2>Winter Storm Operations</h2><p><span class="Normal">When winter weather hits, stay ahead of the storm with Baltimore County Snowfighter. Find the latest on road conditions, current plowing operations, winter storm tips and more.</span></p><h2><span class="Normal">Latest Updates</span></h2>
+&lt;a href="http://www.baltimorecountymd.gov/enablejavascript.html"&gt;http://www.baltimorecountymd.gov/enablejavascript.html&lt;/a&gt;&lt;/b&gt;&lt;/p&gt;</noscript><div id="relatedtopics"><!-- skip navigation removed from included pages --><div id="relatedtopics"></div><div id="calloutarea"><!-- skip navigation removed from included pages --><div class="calloutTitle">Live Traffic Updates</div><div class="image_left"><a href="http://www.chart.state.md.us/TravInfo/trafficcams.php" title="View live traffic in your area."><img width="158" vspace="0" border="0" hspace="0" height="219" alt="image of snow-covered road and CHART logo" src="http://baltimorecountymd.gov/sebin/g/c/CHARTimage.gif"></a></div><p>Get <a href="http://www.chart.state.md.us/TravInfo/trafficcams.php" title="View live traffic conditions in your area.">live traffic updates</a> for your area from the Maryland Department of Transportation.</p></div></div><div><a name="Skip"></a></div><h1>Snowfighter</h1><h2>Winter Storm Operations</h2><p><span class="Normal">When winter weather hits, stay ahead of the storm with Baltimore County Snowfighter. Find the latest on road conditions, current plowing operations, winter storm tips and more.</span></p><h2><span class="Normal">Latest Updates</span></h2>
 
 
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
@@ -258,6 +259,8 @@
 </script>&nbsp;</div></div></div>
 
 				<!--SITE EXECUTIVE HTML END-->
+		</div>
+		</div>
 		</div>
 		</div>
 		
