--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 			<li><a href="red-inside-calendar.html" title="View this page">Inside Template Calendar</a></li>
 			<li><a href="red-inside-csp.html" title="View this page">Constiutent Portal</a></li>
 			<li><a href="red-inside-police.html" title="View this page">Police Inside Template</a></li>
+			<li><a href="red-inside-police-blog.html" title="View this page">Police Blog</a></li>
 			<li><a href="red-inside-fullwidth.html" title="View this page">Road Closure Map (Full Width Template)</a></li>
+			<li><a href="red-inside-snowfighter.html" title="View this page">Snowfighter</a></li>
 		</ul>
 	</div>
 </body>
