Fix bugs with Police Blog

--- a/red-inside-police-blog.html
+++ b/red-inside-police-blog.html
@@ -7,6 +7,7 @@
 		<title>Baltimore County Homepage Government</title>
 		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/temp-content.css"/>
 		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/police-blog.css"/>
+		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/police-blog-extra.css"/>
 		<!-- <link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/temp-print.css"/> -->
 		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/base-2.css"/>
 		<link rel="stylesheet" type="text/css" href="assets/stylesheets/inside-template.css"/>
@@ -283,7 +284,7 @@ On December 21, 2014, Bal...</a>
 	</tbody></table>
 </div><div id="SEBlogViewLinks"><div class="linksDesc">RSS Feed</div>
 		<a href="/News/PoliceNews/iWatch?feed=rss">
-			<img src="/se/images/icons/14x14/feed.png" alt="RSS Feed">
+			<img src="http://baltimorecountymd.gov/se/images/icons/14x14/feed.png" alt="RSS Feed">
 				Click to subscribe
 		</a>
 	</div></div></div></div></div><script type="text/javascript">
