Reformatted html to match psd

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 			<li><a href="red-inside-police-blog.html" title="View this page">Police Blog</a></li>
 			<li><a href="red-inside-fullwidth.html" title="View this page">Road Closure Map (Full Width Template)</a></li>
 			<li><a href="red-inside-snowfighter.html" title="View this page">Snowfighter</a></li>
+			<li><a href="red-inside-animaladoption.html" title="View this page">Adoptable Pets</a></li>
 		</ul>
 	</div>
 </body>
