--- a/red-county-blog.html
+++ b/red-county-blog.html
@@ -223,7 +223,7 @@
 	</tbody></table>
 </div> <div class="seBlogViewLinks"><div class="seBlogViewLinksDesc">RSS Feed</div> 
 		<a href="/News/BaltimoreCountyNow?feed=rss">
-			<img src="/se/images/icons/14x14/feed.png" alt="RSS Feed">
+			<img src="http://baltimorecountymd.gov/se/images/icons/14x14/feed.png" alt="RSS Feed">
 				Click to subscribe
 		</a>
 	</div></div><div class="clearfix"></div> <div class="SEBlogViewPagingArea">
