--- a/homepage.html
+++ b/homepage.html
@@ -18,7 +18,7 @@
 		<script src="assets/js/flickr.js"></script>
 		<script src="assets/js/skipNav.js"></script>
 		<script src="assets/js/county-news.js"></script>
-		<script src="assets/js/template.js"></script>
+		<script src="assets/js/homepage.js"></script>
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 	    <!--[if lt IE 9]>
