Added internal search class to fix header

--- a/red-county-blog-video.html
+++ b/red-county-blog-video.html
@@ -51,7 +51,7 @@
 						</li>
 					</ul>
 				</nav>
-				<div class="search col-md-4">
+				<div class="search search-internal col-md-4">
 				<div class="search-input-container">
 			    <button>Search</button>
 			    <div class="search-text">
