--- a/red-inside-police-blog.html
+++ b/red-inside-police-blog.html
@@ -11,6 +11,11 @@
 		<!-- <link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/temp-print.css"/> -->
 		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/base-2.css"/>
 		<link rel="stylesheet" type="text/css" href="assets/stylesheets/inside-template.css"/>
+		<style>
+			#relatedtopics {
+				display: none;
+			}
+		</style>
 		
 		<!--[if lt IE 9]>
 			<link rel="stylesheet" type="text/css" href="assets/stylesheets/ie.css"/>
