Removed homepage class from non home pages

--- a/red-inside-police-blog.html
+++ b/red-inside-police-blog.html
@@ -36,7 +36,7 @@
 	      <script src="assets/js/lib/respond.min.js"></script>
 	    <![endif]-->
 	</head>
-	<body class="homepage">
+	<body>
 		<div id="skiptocontent" class="skip-nav">
 		  <a href="#main-content" class="link-btn skip">skip to main content</a>
 		</div>
