--- a/red-county-blog.html
+++ b/red-county-blog.html
@@ -31,7 +31,7 @@
 	    <![endif]-->
 
 	</head>
-	<body class="homepage">
+	<body>
 		<div id="skiptocontent" class="skip-nav">
 		  <a href="#main-content" class="link-btn skip">skip to main content</a>
 		</div>
