--- a/red-inside-csp-looking.html
+++ b/red-inside-csp-looking.html
@@ -30,7 +30,7 @@
 	    <![endif]-->
 
 	</head>
-	<body class="homepage">
+	<body>
 		<div id="skiptocontent" class="skip-nav">
 		  <a href="#main-content" class="link-btn skip">skip to main content</a>
 		</div>
